[package]
name = "nano-ai"
version = "0.1.0"
edition = "2021"

[dependencies]
js-sys = "0.3.74"
wasm-bindgen = { version = "0.2.97", features = ["serde-serialize"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "2.0.3"
wasm-bindgen-futures = "0.4.47"
serde-wasm-bindgen = "0.6.5"
