[package]
name = "nano-ai"
version = "0.0.2"
edition = "2021"
rust-version = "1.75"
description = "✨ Gemini Nano Adapter for WASM Frameworks."
license = "MIT"
keywords = ["client", "ai", "gemini"]
categories = ["science"]
repository = "https://github.com/opensass/nano-ai"
documentation = "https://docs.rs/nano-ai"
authors = ["Mahmoud Harmouch <oss@wiseai.dev>"]
exclude = ["examples"]

[dependencies]
js-sys = "0.3.72"
wasm-bindgen = { version = "=0.2.95", features = ["serde-serialize"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "2.0.3"
wasm-bindgen-futures = "=0.4.45"
serde-wasm-bindgen = "0.6.5"

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false

[badges]
maintenance = { status = "actively-developed" }
